# studio

./: .gitignore  ARCHITECTURE.md  Makefile  TESTING.md  index.html  package.json  rsbuild.config.ts  tsconfig.json
.mf/diagnostics/: latest.json
dist-tauri/: index.html  mf-manifest.json  mf-stats.json
dist-tauri/static/css/: index.4a5d2df4.css
dist-tauri/static/js/: 506.7e6eb2e8.js  506.7e6eb2e8.js.map  index.538d215e.js  index.538d215e.js.map  lib-react.735e9a9b.js  lib-react.735e9a9b.js.map  studio_host.bcbc5dc7.js  studio_host.bcbc5dc7.js.LICENSE.txt  studio_host.bcbc5dc7.js.map
dist-web/: @mf-types.d.ts  index.html  mf-manifest.json  mf-stats.json
dist-web/static/css/: index.4e237a15.css
dist-web/static/js/: 416.a26b1847.js  (+5 more)
src/: App.tsx  bootstrap.tsx  index.ts  main.css  platform.ts  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/blocks/: loader.ts  registry.ts  types.ts
src/components/: AddChildNodeDialog.tsx  NodeAppearanceDialog.tsx  NodeContextMenu.tsx
src/extensions/: loader.ts  registry.ts  types.ts
src/hooks/: useAgent.ts  useBlockMount.ts  useBlocks.ts  usePluginMount.ts  usePlugins.ts  useSlotHistory.ts
src/lib/: agent.ts  utils.ts
src/providers/: auth.tsx  graph-store.tsx  index.tsx  query.tsx  registry.tsx  theme.tsx
src/sdui/: Renderer.tsx  SduiPage.tsx  SduiRenderPage.tsx  applyPatch.ts  capability.ts  context.tsx  field.ts  types.ts  useActionResponse.ts  useSubscriptions.ts
src/store/: auth.ts  blocks.ts  flow.ts  graph-hooks.ts  graph-store.ts  presentation-store.ts  ui.ts
(+186 files in other folders)
