[package]
name = "studio"
version = "0.1.0"
edition = "2021"

[lib]
name = "studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
desktop_lib = { path = "../../desktop", package = "desktop" }
# Required by `tauri::generate_context!` expansion.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
